# fediscus

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  build.rs
.config/: nextest.toml
config/: application.yaml
fediscus-activitypub/: Cargo.toml
fediscus-activitypub/migrations/: 20241221135600_init.sql
fediscus-activitypub/src/: apub.rs  config.rs  db.rs  handlers.rs  http_server.rs  lib.rs  main.rs  service.rs  sqlite.rs  storage.rs  testing.rs
fediscus-activitypub/src/activities/: accept_follow.rs  create_note.rs  delete_note.rs  follow.rs  like.rs  mod.rs  reject_follow.rs  undo_follow.rs  undo_like.rs
fediscus-activitypub/src/apub/: accept_follow.rs  delete_note.rs  follow.rs  like.rs  note.rs  person.rs  reject_follow.rs  tombstone.rs  undo_follow.rs  undo_like.rs
fediscus-activitypub/src/db/: uri.rs
fediscus-activitypub/src/handlers/: federation.rs
fediscus-activitypub/src/http_server/: handlers.rs
fediscus-activitypub/src/service/: activitypubservice.rs  service.rs  service_impl.rs
fediscus-activitypub/src/storage/: account.rs  blog.rs  follow.rs  note.rs
fediscus-activitypub/src/testing/: memory_storage.rs  server.rs
fediscus-activitypub/src/testing/server/: activities.rs  error.rs  http.rs  instance.rs  objects.rs  utils.rs
fediscus-activitypub/src/testing/server/activities/: accept.rs  create_post.rs  follow.rs  undo.rs
fediscus-activitypub/src/testing/server/data/: local_private_key.pem  local_public_key.pem  system_private_key.pem  system_public_key.pem
fediscus-activitypub/src/testing/server/objects/: person.rs  post.rs
fediscus-activitypub/src/types/: mod.rs
fediscus-activitypub/test/: follow.rs
fediscus-activitypub/test/common/: mod.rs
fediscus-activitypub/tests/: common.rs  config.yaml  follow.rs  note.rs
fediscus-api/: Cargo.toml
fediscus-api/config/: application.yaml
fediscus-api/src/: config.rs  http_server.rs  main.rs
fediscus-api/src/http_server/: handlers.rs
fediscus-common/: Cargo.toml
fediscus-common/src/: http_server.rs
fediscus-common/src/http_server/: config.rs
fediscus-database/: Cargo.toml  build.rs
fediscus-database/migrations/: 20241221135600_init.sql
migrations/: 20241221135600_init.sql
src/: apub.rs  config.rs  db.rs  domain.rs  handlers.rs  main.rs  sqlite.rs  storage.rs
src/activities/: accept.rs  accept_follow.rs  create_note.rs  create_post.rs  follow.rs  mod.rs  reject.rs  reject_follow.rs  undo.rs  undo_follow.rs
src/apub/: accept_follow.rs  follow.rs  note.rs  person.rs  reject_follow.rs  undo_follow.rs
src/db/: uri.rs
src/handlers/: api.rs  federation.rs
src/objects/: mod.rs  user.rs
src/storage/: account.rs  blog.rs  follow.rs  follow_request.rs  note.rs  post.rs
src/types/: mod.rs
test/common/: mastodon.rs
