[workspace]
resolver = "2"
members = [
    "fediscus-activitypub",
    "fediscus-api",
    "fediscus-common",
    "fediscus-database"
]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "sqlite", "tls-rustls"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
