[package]
name = "fediscus-activitypub"
version = "0.1.0"
edition = "2021"

[features]
testing = []

[dependencies]
activitypub_federation = { path="../../activitypub-federation-rust", default-features = false, features = ["axum"] }
#activitypub_federation = { version = "0.6", default-features = false, features = ["axum"] }
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
enum_delegate = "0.2"
fediscus-database = { path = "../fediscus-database" }
futures = "0.3"
html_parser = "0.7"
# The upstream hyperx has hardcoded upper bounds on its dependencies, which breaks dependency resolution.
# This is a fork that uses proper semver dependencies.
hyperx = { git = "https://github.com/chantra/hyperx", branch = "semver" }
# FIXME: Needed by testing module
rand = "0.9"
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
# FIXME: Needed by testing module
serde_json = "1.0"
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "sqlite", "tls-rustls"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
serial_test = "3.2.0"
