[package]
name = "fediscus-activitypub"
version = "0.1.0"
edition = "2021"

[features]
testing = []

[dependencies]
activitypub_federation = { path="../../activitypub-federation-rust", default-features = false, features = ["axum"] }
#activitypub_federation = { version = "0.6", default-features = false, features = ["axum"] }
anyhow = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
config = { workspace = true }
enum_delegate = "0.2"
fediscus-common = { path = "../fediscus-common" }
fediscus-database = { path = "../fediscus-database" }
futures = "0.3"
html_parser = "0.7"
# The upstream hyperx has hardcoded upper bounds on its dependencies, which breaks dependency resolution.
# This is a fork that uses proper semver dependencies.
hyperx = { git = "https://github.com/chantra/hyperx", branch = "semver" }
# FIXME: Needed by testing module
rand = "0.9"
regex = "1.11"
rsa = "0.9"
serde = { workspace = true }
# FIXME: Needed by testing module
serde_json = "1.0"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
serial_test = "3.2.0"
