[package]
name = "fediscus-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
fediscus-common = { path = "../fediscus-common" }
fediscus-database = { path = "../fediscus-database" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "sqlite", "tls-rustls"] }
tokio = { version = "1.42", features = ["full"] }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
aide = { version = "0.14.1", features = ["axum", "axum-json", "axum-tokio", "swagger"] }
schemars = "0.8.21"

